<resources>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="app_name">App</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="Answer">Answer</string>
    <string name="Clear">Clear</string>
    <string name="Enter">Enter</string>
    <string name="Next">next</string>
    <string name="google">Google</string>
    <string name="EnterN">Enter number</string>
</resources>
